cotisationmanifest/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cotisation-backend
  labels:
    app: cotisation-backend
    type: backend
spec:
  selector:
    matchLabels:
      app: cotisation-backend
      type: backend
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cotisation-backend
        type: backend
    spec:
      imagePullSecrets:
       - name: regcred
      containers:
        - name: cotisation-backend
          image: brims15/cotisation:0.0.1-SNAPSHOT
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "2"
              #---------------------------------#
          ports:
            - name: api
              containerPort: 8082
              protocol: TCP
          imagePullPolicy: Always
